...
              mainAxisSize: MainAxisSize.min,
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                const BuildText(data: LocaleKeys.addTask, fontSize: 20.0),
                gap,
                BuildTextField(
                    key: const Key('titleK'),
                    controller: _controller.titleController,
                    validator: _controller.titleValidator,
                    hint: LocaleKeys.taskTitle),
                gap,
                BuildTextField(
                    controller: _controller.descriptionController,
...
        const Space.horizontal(15.0),
        _button(IconsKeys.tag, ctr.toCategories),
        const Spacer(),
        Obx(() => ctr.isLoading.value
            ? const LoadingWidget()
            : _button(IconsKeys.send, ctr.onAddTask,
                color: Palette.mainColor, key: const Key('addTask'))),
      ],
    );
  }

  Widget _button(String icon, impl, {Color? color, Key? key}) {
    return IconButton(
...
